fixed firefox layout issues

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header .btn:hover::before{
 
 .social-links{
   position: absolute;
-  top: 68%;
+  top: 70%;
   border-top: #fff solid 1px;
   width: 40%;
   left: 30%;
